--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
     <main>
       <!--------HERO-------->
 
-        <section class="hero ">
+         <section class="hero ">
         <div class="container hero-content">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-btn btn" data-modal-open>Order Service</button>
         </div>
       </section>
 
-       <section class="advatages-list">
+<section class="advatages-list">
         <div class="container">
           <h2 hidden>advantages</h2>
           <ul class="list advantages">
@@ -412,11 +412,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> 
 
 
         </main> 
-    <!--------FOOTER-------->
+ <!-- ------FOOTER----- -->
     <footer class="footer">
       <div class="container footer-wraper">
         <div class="footer-info">
