--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </section>
 
-       <section class="advatages-list">
+<section class="advatages-list">
         <div class="container">
           <h2 hidden>advantages</h2>
           <ul class="list advantages">
@@ -187,10 +187,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> 
 
 
-      <section class="img-list">
+      <!-- <section class="img-list">
         <div class="container">
           <h2 class="title example-title">What are we doing</h2>
           <ul class="example-pictures list">
@@ -412,7 +412,7 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>  --> --> -->
 
 
         </main> 
