--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </section> 
 
 
-      <!-- <section class="img-list">
+      <section class="img-list">
         <div class="container">
           <h2 class="title example-title">What are we doing</h2>
           <ul class="example-pictures list">
@@ -412,8 +412,7 @@
             </li>
           </ul>
         </div>
-      </section>  --> --> -->
-
+      </section> 
 
         </main> 
     <!-- ------FOOTER------ -->
