--- a/portfolio.html
+++ b/portfolio.html
@@ -275,7 +275,7 @@
       </section>
     </main>
     <!--------FOOTER-------->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-wraper">
         <div class="footer-info">
           <a href="./index.html" class="logo footer-logo"><span>Web</span>Studio</a>
@@ -336,7 +336,7 @@
       </div>
     </form>
   </div>
-</footer> -->
+</footer>
 <script src="./js/mobile.js"></script>
 </body>
 </html>
