--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link header-link studio-current " href="./index.html">Studio</a>
+              <a class="nav-link header-link " href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link header-link  " href="./portfolio.html">Portfolio</a>
+              <a class="nav-link header-link studio-current " href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link header-link " href="">Contacts</a>
