--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <!--------HEADER-------->
+
     <header class="header container">
       <div class=" main-nav">
         <nav class="header-nav">
@@ -195,13 +196,13 @@
           <h2 class="title example-title">What are we doing</h2>
           <ul class="example-pictures list">
             <li class="example-pictures-list">
-              <img src="./images/imac.jpg" alt="imac" width="360" />
+              <img srcset="./images/img1-2x.jpg" src="./images/img1-1x.jpg" alt="imac" width="360" />
             </li>
             <li class="example-pictures-list">
-              <img src="./images/iphone.jpg" alt="iphone" width="360" />
+              <img srcset="./images/img2-2x.jpg" src="./images/img2-1x.jpg"alt="iphone" width="360" />
             </li>
             <li class="example-pictures-list">
-              <img src="./images/maciphone.jpg" alt="maciphone" width="360" />
+              <img srcset="./images/img3-2x.jpg" src="./images/img3-1x.jpg" alt="maciphone" width="360" />
             </li>
           </ul>
         </div>
@@ -213,7 +214,7 @@
           <h2 class="title team-title">Our Team</h2>
           <ul class="list team-list">
             <li class="team-item">
-              <img src="./images/man1.jpg" alt="man1" width="264" />
+              <img srcset="./images/man1-2x.jpg" src="./images/man1-1x.jpg" alt="man1" width="264" />
               <div class="team-worker">
               <h3 class="decsr team-descr">Mark Guerrero</h3>
               <p class="sub-descr">Product Designer</p>
@@ -250,7 +251,7 @@
           </div>
         </li>
             <li class="team-item">
-              <img src="./images/man2.jpg" alt="man2" width="264" />
+              <img srcset="./images/man2-2x.jpg" src="./images/man2-1x.jpg" alt="man2" width="264" />
               <div class="team-worker">
               <h3 class="decsr team-descr">Tom Ford</h3>
               <p class="sub-descr">Frontend Developer</p>
@@ -287,7 +288,7 @@
           </div>
         </li>
             <li class="team-item">
-              <img src="./images/girl.jpg" alt="girl" width="264" />
+              <img srcset="./images/girl-2x.jpg" src="./images/girl-1x.jpg" alt="girl" width="264" />
               <div class="team-worker">
               <h3 class="decsr team-descr">Camila Garcia</h3>
               <p class="sub-descr">Marketing</p>
@@ -324,7 +325,7 @@
             </div>
           </li>
             <li class="team-item">
-              <img src="./images/man3.jpg" alt="man3" width="264" />
+              <img srcset="./images/man3-2x.jpg" src="./images/man3-1x.jpg" alt="man3" width="264" />
               <div class="team-worker">
               <h3 class="decsr team-descr">Daniel Wilson</h3>
               <p class="sub-descr">UI Designer</p>
