--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <!--------HEADER-------->
 
-    <header class="header container">
-      <div class=" main-nav">
+    <header class="header ">
+      <div class=" main-nav container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
           <ul class="nav-list">
