--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <!--------HEADER-------->
-    <header class="header container">
-      <div class=" main-nav">
+    <header class="header">
+      <div class=" main-nav container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
           <ul class="nav-list">
