--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,35 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
                 <div class="team-list-img-wrapper">
-                  <img src="./images/BankingApp.jpg" alt="App" width="360" />
+                  <picture>
+                    <source
+                      srcset="
+                      ./images/portfolio1-1x.jpg 1x,
+                      ./images/portfolio1-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio1-1x.jpg 1x,
+                      ./images/portfolio1-2x.jpg 2x
+                      "
+                      media="(max-width:1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio1-1x.jpg 1x,
+                        ./images/portfolio1-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/BankingApp.jpg" 
+                      alt="App" 
+                      width="360" 
+                    />
+                  </picture>
+                  <!-- <img src="./images/BankingApp.jpg" alt="App" width="360" /> -->
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
@@ -158,11 +186,38 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
               <div class="team-list-img-wrapper">
-                
+                <picture>
+                  <source
+                    srcset="
+                    ./images/portfolio2-1x.jpg 1x,
+                    ./images/portfolio2-2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                    ./images/portfolio2-1x.jpg 1x,
+                    ./images/portfolio2-2x.jpg 2x
+                    "
+                    media="(max-width:1199px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio2-1x.jpg 1x,
+                      ./images/portfolio2-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
                   <img
+                    src="./images/CashlessPayment.jpg" 
+                    alt="Marketing" 
+                    width="360" 
+                  />
+                </picture>
+                  <!-- <img
                   src="./images/CashlessPayment.jpg"
                   alt="Marketing"
-                  width="360" />
+                  width="360" /> -->
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
@@ -176,7 +231,36 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
               <div class="team-list-img-wrapper">
-                  <img src="./images/MeditaionApp.jpg" alt="App" width="360" />
+                <picture>
+                  <source
+                    srcset="
+                    ./images/portfolio3-1x.jpg 1x,
+                    ./images/portfolio3-2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                    ./images/portfolio3-1x.jpg 1x,
+                    ./images/portfolio3-2x.jpg 2x
+                    "
+                    media="(max-width:1199px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio3-1x.jpg 1x,
+                      ./images/portfolio3-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/MeditaionApp.jpg" 
+                    alt="Marketing" 
+                    width="360" 
+                  />
+                </picture>
+
+                  <!-- <img src="./images/MeditaionApp.jpg" alt="App" width="360" /> -->
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
@@ -190,7 +274,35 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
               <div class="team-list-img-wrapper">
-                  <img src="./images/TaxiService.jpg" alt="Marketing" width="360" />
+                <picture>
+                  <source
+                    srcset="
+                    ./images/portfolio4-1x.jpg 1x,
+                    ./images/portfolio4-2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                    ./images/portfolio4-1x.jpg 1x,
+                    ./images/portfolio4-2x.jpg 2x
+                    "
+                    media="(max-width:1199px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio4-1x.jpg 1x,
+                      ./images/portfolio4-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/TaxiService.jpg" 
+                    alt="Marketing" 
+                    width="360" 
+                  />
+                </picture>
+                  <!-- <img src="./images/TaxiService.jpg" alt="Marketing" width="360" /> -->
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
@@ -204,7 +316,35 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
               <div class="team-list-img-wrapper">
-                  <img src="./images/ScreenIllustrations.jpg" alt="Design" width="360" />
+                <picture>
+                  <source
+                    srcset="
+                    ./images/portfolio5-1x.jpg 1x,
+                    ./images/portfolio5-2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                    ./images/portfolio5-1x.jpg 1x,
+                    ./images/portfolio5-2x.jpg 2x
+                    "
+                    media="(max-width:1199px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio5-1x.jpg 1x,
+                      ./images/portfolio5-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/ScreenIllustrations.jpg" 
+                    alt="Design" 
+                    width="360" 
+                  />
+                </picture>
+                  <!-- <img src="./images/ScreenIllustrations.jpg" alt="Design" width="360" /> -->
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
@@ -218,7 +358,35 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
               <div class="team-list-img-wrapper">
-                  <img src="./images/OnlineCourses.jpg" alt="Marketing" width="360" />
+                <picture>
+                  <source
+                    srcset="
+                    ./images/portfolio6-1x.jpg 1x,
+                    ./images/portfolio6-2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                    ./images/portfolio6-1x.jpg 1x,
+                    ./images/portfolio6-2x.jpg 2x
+                    "
+                    media="(max-width:1199px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio6-1x.jpg 1x,
+                      ./images/portfolio6-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/MeditaionApp.jpg" 
+                    alt="Marketing" 
+                    width="360" 
+                  />
+                </picture>
+                  <!-- <img src="./images/OnlineCourses.jpg" alt="Marketing" width="360" /> -->
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
@@ -232,7 +400,35 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
               <div class="team-list-img-wrapper">
-                  <img src="./images/InstagramStories.jpg" alt="Design" width="360" />
+                <picture>
+                  <source
+                    srcset="
+                    ./images/portfolio7-1x.jpg 1x,
+                    ./images/portfolio7-2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                    ./images/portfolio7-1x.jpg 1x,
+                    ./images/portfolio7-2x.jpg 2x
+                    "
+                    media="(max-width:1199px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio7-1x.jpg 1x,
+                      ./images/portfolio7-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/InstagramStories.jpg" 
+                    alt="Design" 
+                    width="360" 
+                  />
+                </picture>
+                  <!-- <img src="./images/InstagramStories.jpg" alt="Design" width="360" /> -->
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
@@ -246,7 +442,35 @@
             <li class="filter-item">
               <a class="portfolio-item-link" href="">
               <div class="team-list-img-wrapper">
-                  <img src="./images/OrganicFood.jpg" alt="Web Site" width="360" />
+                <picture>
+                  <source
+                    srcset="
+                    ./images/portfolio8-1x.jpg 1x,
+                    ./images/portfolio8-2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                    ./images/portfolio8-1x.jpg 1x,
+                    ./images/portfolio8-2x.jpg 2x
+                    "
+                    media="(max-width:1199px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio8-1x.jpg 1x,
+                      ./images/portfolio8-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/OrganicFood.jpg" 
+                    alt="Web Site" 
+                    width="360" 
+                  />
+                </picture>
+                  <!-- <img src="./images/OrganicFood.jpg" alt="Web Site" width="360" /> -->
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
@@ -260,7 +484,35 @@
               <li class="filter-item">
                 <a class="portfolio-item-link" href="">
                 <div class="team-list-img-wrapper">
-                    <img src="./images/Coffee.jpg" alt="Web Site" width="360" />
+                  <picture>
+                    <source
+                      srcset="
+                      ./images/portfolio9-1x.jpg 1x,
+                      ./images/portfolio9-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio9-1x.jpg 1x,
+                      ./images/portfolio9-2x.jpg 2x
+                      "
+                      media="(max-width:1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio9-1x.jpg 1x,
+                        ./images/portfolio9-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/InstagramStories.jpg" 
+                      alt="Web Site" 
+                      width="360" 
+                    />
+                  </picture>
+                    <!-- <img src="./images/Coffee.jpg" alt="Web Site" width="360" /> -->
                     <p class="overlay">
                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                    </p>
