--- a/index.html
+++ b/index.html
@@ -430,28 +430,28 @@
           <h2 class="footer-title">Social media</h2>
         <ul class="footer-social-list list">
           <li>
-            <a href="" class="social-list-link">
+            <a href="" class="footer-social-list-link">
               <svg class="social-list-icon-footer social-list-icon">
                 <use href="./images/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="" class="social-list-link">
+            <a href="" class="footer-social-list-link">
               <svg class="social-list-icon-footer social-list-icon">
                 <use href="./images/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="" class="social-list-link">
+            <a href="" class="footer-social-list-link">
               <svg class="social-list-icon-footer social-list-icon" >
                 <use href="./images/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="" class="social-list-link" >
+            <a href="" class="footer-social-list-link" >
               <svg class="social-list-icon-footer social-list-icon">
                 <use href="./images/sprite.svg#icon-linkedin"></use>
               </svg>
