--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </button>
             <ul class="mob-menu-list">
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item mob-header-link nav-link is-active" href="./index.html">Studio</a>
+                <a class="mob-menu-item mob-header-link nav-link " href="./index.html">Studio</a>
               </li>
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item mob-header-link nav-link" href="./portfolio.html">Portfolio</a>
+                <a class="mob-menu-item mob-header-link nav-link is-active" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="mob-menu-list-item">
                 <a class="mob-menu-item mob-header-link nav-link " href="">Contacts</a>
@@ -366,7 +366,7 @@
     </section>
 
     <section class="customers ">
-        <div class="container customer-container">
+        <div class="container customers-container">
           <h2 class="customers-descr">Customers</h2>
           <ul class="list customers-list">
             <li class="customers-link">
