--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
               <a class="nav-link header-link " href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link header-link studio-current " href="./portfolio.html">Portfolio</a>
+              <a class="nav-link header-link studio-current  " href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link header-link " href="">Contacts</a>
@@ -59,10 +59,10 @@
             </button>
             <ul class="mob-menu-list">
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item mob-header-link nav-link is-active" href="./index.html">Studio</a>
+                <a class="mob-menu-item mob-header-link nav-link " href="./index.html">Studio</a>
               </li>
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item mob-header-link nav-link" href="./portfolio.html">Portfolio</a>
+                <a class="mob-menu-item mob-header-link nav-link is-active" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="mob-menu-list-item">
                 <a class="mob-menu-item mob-header-link nav-link " href="">Contacts</a>
