--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   </svg>
                 </div>
               <h3 class="decsr advantages-descr">Strategy</h3>
-              <p>
+              <p class="advantages-sub-descr">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -157,7 +157,7 @@
                 </svg>
               </div>
               <h3 class="decsr advantages-descr">Punctuality</h3>
-              <p>
+              <p class="advantages-sub-descr">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -169,7 +169,7 @@
                 </svg>
               </div>
               <h3 class="decsr advantages-descr">Diligence</h3>
-              <p>
+              <p class="advantages-sub-descr">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
@@ -181,7 +181,7 @@
                 </svg>
               </div>
               <h3 class="decsr advantages-descr">Technologies</h3>
-              <p>
+              <p class="advantages-sub-descr">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
