--- a/index.html
+++ b/index.html
@@ -214,7 +214,14 @@
           <h2 class="title team-title">Our Team</h2>
           <ul class="list team-list">
             <li class="team-item">
-              <img srcset="./images/man1-1x.jpg , ./images/man1-2x.jpg" src="./images/man1.jpg" alt="man1" width="264" />
+              <img 
+              srcset="
+              ./images/man1-1x.jpg 1x ,
+              ./images/man1-2x.jpg 2x"
+              src="./images/man1.jpg"
+              alt="man1"
+              width="264"
+              />
               <div class="team-worker">
               <h3 class="decsr team-descr">Mark Guerrero</h3>
               <p class="sub-descr">Product Designer</p>
@@ -251,7 +258,12 @@
           </div>
         </li>
             <li class="team-item">
-              <img srcset="./images/man2-1x.jpg , ./images/man2-2x.jpg" src="./images/man2.jpg" alt="man2" width="264" />
+              <img 
+              srcset="
+              ./images/man2-1x.jpg 1x,
+               ./images/man2-2x.jpg 2x"
+               src="./images/man2.jpg" 
+               alt="man2" width="264" />
               <div class="team-worker">
               <h3 class="decsr team-descr">Tom Ford</h3>
               <p class="sub-descr">Frontend Developer</p>
@@ -288,7 +300,13 @@
           </div>
         </li>
             <li class="team-item">
-              <img srcset="./images/girl-1x.jpg , ./images/girl-2x.jpg" src="./images/girl.jpg" alt="girl" width="264" />
+              <img 
+              srcset="
+              ./images/girl-1x.jpg 1x , 
+              ./images/girl-2x.jpg 2x" 
+              src="./images/girl.jpg"
+               alt="girl" 
+               width="264" />
               <div class="team-worker">
               <h3 class="decsr team-descr">Camila Garcia</h3>
               <p class="sub-descr">Marketing</p>
@@ -325,7 +343,13 @@
             </div>
           </li>
             <li class="team-item">
-              <img srcset="./images/man3-1x.jpg , ./images/man3-2x.jpg" src="./images/man3.jpg" alt="man3" width="264" />
+              <img 
+              srcset="
+              ./images/man3-1x.jpg 1x , 
+              ./images/man3-2x.jpg 2x" 
+              src="./images/man3.jpg" 
+              alt="man3" 
+              width="264" />
               <div class="team-worker">
               <h3 class="decsr team-descr">Daniel Wilson</h3>
               <p class="sub-descr">UI Designer</p>
