--- a/index.html
+++ b/index.html
@@ -196,13 +196,31 @@
           <h2 class="title example-title">What are we doing</h2>
           <ul class="example-pictures list">
             <li class="example-pictures-list">
-              <img srcset="./images/img1-1x.jpg , ./images/img1-2x.jpg" src="./images/imac.jpg" alt="imac" width="360" />
+              <img 
+              srcset="
+              ./images/img1-1x.jpg 1x,
+               ./images/img1-2x.jpg 2x" 
+               src="./images/imac.jpg" 
+               alt="imac" 
+               width="360" />
             </li>
             <li class="example-pictures-list">
-              <img srcset="./images/img2-1x.jpg , ./images/img2-2x.jpg" src="./images/iphone.jpg" alt="iphone" width="360" />
+              <img 
+              srcset="
+              ./images/img2-1x.jpg 1x,
+               ./images/img2-2x.jpg 2x" 
+               src="./images/iphone.jpg" 
+               alt="iphone" 
+               width="360" />
             </li>
             <li class="example-pictures-list">
-              <img srcset="./images/img2-1x.jpg , ./images/img3-2x.jpg" src="./images/maciphone.jpg" alt="maciphone" width="360" />
+              <img 
+              srcset="
+              ./images/img2-1x.jpg 1x, 
+              ./images/img3-2x.jpg 2x" 
+              src="./images/maciphone.jpg" 
+              alt="maciphone"
+              width="360" />
             </li>
           </ul>
         </div>
